--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.application.name=Tryhev API
+server.port=9000
 
+logging.level.root=INFO
+logging.level.com.tryhev.api=DEBUG
+logging.level.org.springframework.jdbc=ERROR
+
+endpoints.health.enabled=true
+endpoints.trace.enabled=true
+endpoints.info.enabled=true
+endpoints.metrics.enabled=true
