Fix actuator config by get rid of deprecated config params and expose all actuator endpoints.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,4 @@ logging.level.root=INFO
 logging.level.com.tryhev.api=DEBUG
 logging.level.org.springframework.jdbc=ERROR
 
-endpoints.health.enabled=true
-endpoints.trace.enabled=true
-endpoints.info.enabled=true
-endpoints.metrics.enabled=true
+management.endpoints.web.exposure.include=*
